Finalize store item capability, missing tests